[project]
name = "polymorph"
version = "0.1.0"
description = "Polymarket data scraper and pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0",
  "httpx[http2]>=0.28.1",
  "joblib>=1.5.2",
  "matplotlib>=3.10.7",
  "numpy>=2.3.4",
  "optuna>=4.5.0",
  "polars>=1.35.1",
  "pyarrow>=22.0.0",
  "pydantic>=2.12.3",
  "pydantic-settings>=2.11.0",
  "rich>=14.2.0",
  "scipy>=1.16.3",
  "tenacity>=9.1.2",
  "typer>=0.20.0",
]

[project.scripts]
polymorph = "polymorph.cli:main"

[dependency-groups]
dev = [
  "black>=25.9.0",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.14.3",
  "types-requests>=2.32.4.20250913",
]
distributed = ["ray[default]>=2.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
