#:tombi schema.strict = false

[project]
name = "polymorph"
version = "0.1.0"
description = "Polymarket data scraper and pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0",
  "httpx[http2]>=0.28.1",
  "joblib>=1.5.2",
  "matplotlib>=3.10.7",
  "numpy>=2.3.4",
  "optuna>=4.5.0",
  "polars>=1.35.1",
  "pyarrow>=22.0.0",
  "pydantic>=2.12.3",
  "pydantic-settings>=2.11.0",
  "rich>=14.2.0",
  "scipy>=1.16.3",
  "tenacity>=9.1.2",
  "typer>=0.20.0",
]

[project.scripts]
polymorph = "polymorph.cli:main"

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "black>=25.9.0",
  "flake8>=7.3.0",
  "flake8-bugbear>=25.10.21",
  "flake8-comprehensions>=3.17.0",
  "flake8-docstrings>=1.7.0",
  "isort>=7.0.0",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.14.3",
  "types-requests>=2.32.4.20250913",
  "vulture>=2.14",
]
distributed = ["ray[default]>=2.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | build
  | dist
  | \.eggs
  | \.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["**/.venv/**", "**/build/**", "**/dist/**"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = [
  '\.venv',
  "build",
  "dist",
  '\.eggs',
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
markers = [
  "integration: marks tests as integration tests that make real API calls (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 120
exclude = [
  ".venv",
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".eggs",
  "*.egg-info"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
